--- a/valentine.html
+++ b/valentine.html
@@ -17,7 +17,7 @@
 
         <div class="app">
             
-            <button id="generate">Тык! Получи свою Валентинку!</button>
+            <button id="generate">Тык! Держи свою Валентинку!</button>
             <div id="valentine">
 
                
